jihad-week-update

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI='mongodb+srv://waheedianho65:N9mHyJBTjKqZ0T35@musaabaqah.8viqrik.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URI='mongodb+srv://waheedianho65:N9mHyJBTjKqZ0T35@musaabaqah.8viqrik.mongodb.net/musaabaqah'
 PORT='9090'
